RESOLVED FIXED292462
[JSC] Fix incorrect early return in isNodeCloneable and add debug cycle check
https://bugs.webkit.org/show_bug.cgi?id=292462
Summary [JSC] Fix incorrect early return in isNodeCloneable and add debug cycle check
Yijia Huang
Reported 2025-05-02 15:53:05 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-02 15:53:14 PDT
Yijia Huang
Comment 2 2025-05-02 15:57:04 PDT
EWS
Comment 3 2025-05-03 03:38:23 PDT
Committed 294474@main (af07422edd14): <https://commits.webkit.org/294474@main> Reviewed commits have been landed. Closing PR #44870 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.