[JSC] Fix incorrect early return in isNodeCloneable and add debug cycle check https://bugs.webkit.org/show_bug.cgi?id=292462 rdar://150555146

Reviewed by Yusuke Suzuki.

Previously, the NodeCloneStatus::Special/Common node case in isNodeCloneable()
returned early, skipping cloneableCache update and potential cleanup. This
patch changes it to break and ensures the result flows through the unified return path.

Also adds a debug-only ThreadSpecific visiting set to detect accidental
cycles during recursion. This check is safe because Phi-like nodes are
categorized as NodeCloneStatus::PreCloned and are not recursively visited.

The visiting set is fully cleared after each cloneability check pass,
ensuring no state leakage between invocations.

Uses UncheckedKeyHashSet for cloneableCache and visiting for better performance.

* Source/JavaScriptCore/dfg/DFGCloneHelper.cpp:
(JSC::DFG::CloneHelper::isNodeCloneable):
* Source/JavaScriptCore/dfg/DFGCloneHelper.h:
* Source/JavaScriptCore/dfg/DFGLoopUnrollingPhase.cpp:
(JSC::DFG::LoopUnrollingPhase::isLoopBodyUnrollable):

Canonical link: https://commits.webkit.org/294474@main